QA Latest Data/main/default/objects/Trade_Ally_Tax__c/Trade_Ally_Tax__c.object-meta.xml
<CustomObject>
    <label>Trade Ally Tax</label>
    <nameField>
        <displayFormat>TATN-{0000}</displayFormat>
        <label>Trade Ally Tax Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>