QA Latest Data/main/default/objects/Trade_Ally_Tax__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Trade Ally Taxes</relationshipLabel>
    <relationshipName>Trade_Ally_Taxes</relationshipName>
    <type>Lookup</type>
</CustomField>