QA Latest Data/main/default/objects/Trade_Ally_Tax__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <referenceTo>Tax__c</referenceTo>
    <relationshipLabel>Trade Ally Taxes</relationshipLabel>
    <relationshipName>Trade_Ally_Taxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>