QA Latest Data/main/default/objects/Trade_Ally_Tax__c/fields/Trade_Ally__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ally__c</fullName>
    <label>Trade Ally</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trade Ally Taxes</relationshipLabel>
    <relationshipName>Trade_Ally_Taxes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>